# go-moku

./: .gitignore  README.md  pyproject.toml  run_tests.py
src/: main.py
src/files/: __init__.py  argparse_functions.py  auto_save.py  auto_save_game.py  file_operations.py  load_game_state.py  load_saved_game.py  log_error.py  log_history.py  logging.py  save_game_state.py
src/game/: __init__.py  game_flow.py  game_history.py  game_logic.py  menu_management.py
src/interface/: __init__.py  display.py  file_menu.py  game_history.py  main_menu.py  menus.py  pause_menu.py  print_board.py
src/mechanics/: __init__.py  ai.py  create_initial_game_state.py  game_flow.py  game_initialization.py  game_logic.py  initialize_new_game.py  move_processing.py  start_and_load.py  user_input.py
src/utils/: __init__.py  constants.py  file_utils.py  time_utils.py
tests/: test_auto_save_game.py
