[tool.poetry]
name = "go-moku"
version = "2.0.0"
description = "Jogo go-moku em python para a disciplina de Algoritmos Computacionais da UERJ"
authors = ["Marcos Antonio Silva do Espirito Santo <marcos.espirito@rededor.com.br>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
